reword slightly erroneous comment

--- a/repo-playground/repo-playground.csproj
+++ b/repo-playground/repo-playground.csproj
@@ -9,7 +9,7 @@
         <RootNamespace>RepoPlayground</RootNamespace>
     </PropertyGroup>
 
-    <!-- make all references non-private, so they won't be copied to the output folder -->
+    <!-- don't copy reference assemblies to the output folder -->
     <Target Name="ClearReferenceCopyLocalPaths" AfterTargets="ResolveAssemblyReferences">
         <ItemGroup>
             <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)"/>
