--- a/repo-playground/repo-playground.csproj
+++ b/repo-playground/repo-playground.csproj
@@ -17,12 +17,13 @@
     </Target>
 
     <ItemGroup>
+        <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1" PrivateAssets="all"/>
         <PackageReference Include="BepInEx.Analyzers" Version="1.0.8" PrivateAssets="all"/>
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.1.0" PrivateAssets="all"/>
     </ItemGroup>
 
     <ItemGroup Condition="$(CI) != 'true'">
-        <Reference Include="Assembly-CSharp">
+        <Reference Include="Assembly-CSharp" Publicize="true">
             <HintPath>$(RepoDir)/REPO_Data/Managed/Assembly-CSharp.dll</HintPath>
         </Reference>
         <Reference Include="Assembly-CSharp-firstpass">
