--- a/repo-playground/repo-playground.csproj
+++ b/repo-playground/repo-playground.csproj
@@ -16,12 +16,14 @@
         </ItemGroup>
     </Target>
 
+    <!-- Development tools -->
     <ItemGroup>
         <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1" PrivateAssets="all"/>
         <PackageReference Include="BepInEx.Analyzers" Version="1.0.8" PrivateAssets="all"/>
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.1.0" PrivateAssets="all"/>
     </ItemGroup>
 
+    <!-- Local development-only -->
     <ItemGroup Condition="$(CI) != 'true'">
         <Reference Include="Assembly-CSharp" Publicize="true">
             <HintPath>$(RepoDir)/REPO_Data/Managed/Assembly-CSharp.dll</HintPath>
@@ -46,10 +48,12 @@
         </Reference>
     </ItemGroup>
 
+    <!-- CI-only -->
     <ItemGroup Condition="$(CI) == 'true'">
         <PackageReference Include="R.E.P.O.GameLibs.Steam" Version="0.1.2-ngd.0"/>
     </ItemGroup>
 
+    <!-- Common runtime dependencies -->
     <ItemGroup>
         <PackageReference Include="BepInEx.Core" Version="5.4.21"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.21"/>
