--- a/repo-playground/repo-playground.csproj
+++ b/repo-playground/repo-playground.csproj
@@ -53,10 +53,15 @@
         <PackageReference Include="R.E.P.O.GameLibs.Steam" Version="0.1.2-ngd.0"/>
     </ItemGroup>
 
-    <!-- Common runtime dependencies -->
+    <!-- Common runtime dependencies (provided by game-files or Thunderstore) -->
     <ItemGroup>
         <PackageReference Include="BepInEx.Core" Version="5.4.21"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.21"/>
+    </ItemGroup>
+
+    <!-- Common runtime dependencies (not provided) -->
+    <ItemGroup>
+        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
     </ItemGroup>
 
 </Project>
