--- a/team-upgrades/team-upgrades.csproj
+++ b/team-upgrades/team-upgrades.csproj
@@ -2,11 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <AssemblyName>dev.lordfirespeed.repo_playground</AssemblyName>
-        <Product>REPO Playground</Product>
-        <Description>'Playground' project for R.E.P.O.</Description>
+        <AssemblyName>dev.lordfirespeed.team_upgrades</AssemblyName>
+        <Product>Lordfirespeed's Team Upgrades</Product>
+        <Description>Team upgrades. Done right.</Description>
 
-        <RootNamespace>RepoPlayground</RootNamespace>
+        <RootNamespace>TeamUpgrades</RootNamespace>
     </PropertyGroup>
 
     <!-- don't copy reference assemblies to the output folder -->
@@ -57,11 +57,6 @@
     <ItemGroup>
         <PackageReference Include="BepInEx.Core" Version="5.4.21"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.21"/>
-    </ItemGroup>
-
-    <!-- Common runtime dependencies (not provided) -->
-    <ItemGroup>
-        <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
     </ItemGroup>
 
 </Project>
