--- a/team-upgrades/team-upgrades.csproj
+++ b/team-upgrades/team-upgrades.csproj
@@ -46,6 +46,12 @@
         <Reference Include="UnityEngine.InputSystem">
             <HintPath>$(RepoDir)/REPO_Data/Managed/Unity.InputSystem.dll</HintPath>
         </Reference>
+        <Reference Include="PhotonUnityNetworking">
+            <HintPath>$(RepoDir)/REPO_Data/Managed/PhotonUnityNetworking.dll</HintPath>
+        </Reference>
+        <Reference Include="PhotonRealtime">
+            <HintPath>$(RepoDir)/REPO_Data/Managed/PhotonRealtime.dll</HintPath>
+        </Reference>
     </ItemGroup>
 
     <!-- CI-only -->
@@ -57,6 +63,10 @@
     <ItemGroup>
         <PackageReference Include="BepInEx.Core" Version="5.4.21"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.21"/>
+        <PackageReference Include="Zehs.REPOLib" Version="2.*" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Extensions\" />
     </ItemGroup>
 
 </Project>
