--- a/team-upgrades/team-upgrades.csproj
+++ b/team-upgrades/team-upgrades.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.1" PrivateAssets="all"/>
         <PackageReference Include="BepInEx.Analyzers" Version="1.0.8" PrivateAssets="all"/>
         <PackageReference Include="BepInEx.PluginInfoProps" Version="2.1.0" PrivateAssets="all"/>
+        <PackageReference Include="PolySharp" Version="1.15.0" PrivateAssets="all"/>
     </ItemGroup>
 
     <!-- Local development-only -->
@@ -64,9 +65,6 @@
         <PackageReference Include="BepInEx.Core" Version="5.4.21"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.21"/>
         <PackageReference Include="Zehs.REPOLib" Version="2.*" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="Extensions\" />
     </ItemGroup>
 
 </Project>
