--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,16 @@ on:
   # Trigger the workflow on pushes to only the 'main' branch (this avoids duplicate checks being run e.g., for dependabot pull requests)
   push:
     branches: [ main ]
+
   # Trigger the workflow on any pull request
   pull_request:
+
+  # Trigger the workflow when called by another workflow
+  workflow_call:
+    inputs:
+      ref:
+        required: true
+        type: string
 
 defaults:
   run:
@@ -19,6 +27,7 @@ jobs:
       - name: Fetch Sources
         uses: actions/checkout@v4
         with:
+          ref: ${{ inputs.ref || null }}
           fetch-depth: 0
           filter: tree:0
           submodules: recursive
