set `NeutralLanguage` to `en-gb`

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,7 @@
 
     <!-- Compiler/MSBuild switches -->
     <PropertyGroup>
+        <NeutralLanguage>en-GB</NeutralLanguage>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
