--- a/team-upgrades/team-upgrades.csproj
+++ b/team-upgrades/team-upgrades.csproj
@@ -71,7 +71,7 @@
     <ItemGroup>
         <PackageReference Include="BepInEx.Core" Version="5.4.21"/>
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.21"/>
-        <PackageReference Include="Zehs.REPOLib" Version="2.0.1"/>
+        <PackageReference Include="Zehs.REPOLib" Version="2.1.0" Publicize="true"/>
     </ItemGroup>
 
 </Project>
